    defined on the relevant FUNDAMENTAL-BINARY-{INPUT,OUTPUT}-STREAM
    classes.  (thanks to Antonio Martinez)
  * improved ANSIness in DESCRIBE: The DESCRIBE function no longer
    outputs FRESH-LINE or TERPRI, and no longer converts its stream
    argument to a pretty-print stream. Instead, it leaves any such 
    operations to DESCRIBE-OBJECT methods.
  * bug fix: APROPOS now respects the EXTERNAL-ONLY flag.  (reported
    by Teemu Kalvas)
  * bug fix: NIL is now a valid destructuring argument in DEFMACRO
    lambda lists.  (thanks to David Lichteblau)
  * bug fix: defining a generic function with a :METHOD-CLASS being a
    subclass of STANDARD-METHOD no longer causes stack exhaustion.
    (thanks to Gerd Moellmann)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** NIL is now allowed as a structure slot name.
    ** arbitrary numbers, not just reals, are allowed in certain
       circumstances in LOOP for-as-arithmetic clauses.
    ** multiple class redefinitions before slot access no longer
       causes a type error.
    ** (SETF FIND-CLASS) now accepts NIL as an argument to remove the
       association between the name and a class.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.